# documind

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  railway.toml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  documents.py  health.py
backend/app/core/: exceptions.py  logging.py
backend/app/models/: database.py  schemas.py
backend/app/services/: document_processor.py  llm.py  rag.py  vector_store.py
backend/sample_docs/: employee-handbook.md  engineering-onboarding.md  product-guide.md  security-policy.md
backend/tests/: conftest.py  test_api.py  test_document_processor.py  test_rag.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/documents/: page.tsx
frontend/components/chat/: chat-input.tsx  chat-message.tsx  source-card.tsx  streaming-text.tsx
frontend/components/documents/: document-list.tsx  processing-status.tsx  upload-zone.tsx
frontend/components/layout/: sidebar.tsx
frontend/lib/: api.ts  helpers.ts  types.ts
